[metadata]
name = taxonerd
version = attr: taxonerd.__version__
description = A Python package and CLI tool based on spaCy for detecting mentions of taxonomic entities in text
long_description = file: README.md
long_description_content_type = text/markdown
author_email = nicolas.leguillarme@univ-grenoble-alpes.fr
url = https://github.com/nleguillarme/taxonerd
keywords = spacy, ner, transformers, deep neural networks, ecology, evolution
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Bug Tracker = https://github.com/nleguillarme/taxonerd/issues

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    click<7.2.0,>=7.1.1
    pandas>=0.24.2
    scispacy==0.5.1
    spacy>3.4.0,<3.5.0
    spacy-transformers>=1.1.8
    textract>=1.6.3

[options.entry_points]
console_scripts =
    taxonerd = taxonerd.cli:main

[options.extras_require]
cuda110 =
    cupy-cuda110>=5.0.0b4,<12.0.0
cuda111 =
    cupy-cuda111>=5.0.0b4,<12.0.0
cuda112 =
    cupy-cuda112>=5.0.0b4,<12.0.0
cuda113 =
    cupy-cuda113>=5.0.0b4,<12.0.0
cuda114 =
    cupy-cuda114>=5.0.0b4,<12.0.0
cuda115 =
    cupy-cuda115>=5.0.0b4,<12.0.0
cuda116 =
    cupy-cuda116>=5.0.0b4,<12.0.0

[options.packages.find]
exclude =
    dev*
    eval*
    models*
    R*
    taxonerd-*
    test*

[tool:pytest]
addopts = --ignore=dev --ignore=eval --ignore=models --ignore=R
