[metadata]
name = taxonerd
version = attr: taxonerd.__version__
description = A Python package and CLI tool based on spaCy for detecting mentions of taxonomic entities in text
long_description = file: README.md
long_description_content_type = text/markdown
author_email = nicolas.leguillarme@univ-grenoble-alpes.fr
url = https://github.com/nleguillarme/taxonerd
keywords = spacy, ner, transformers, deep neural networks, ecology, evolution
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Bug Tracker = https://github.com/nleguillarme/taxonerd/issues

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    click<7.2.0,>=7.1.1
    pandas>=0.24.2
    scispacy==0.5.4
    spacy>=3.7.0,<3.8.0
    spacy-transformers>=1.3.4
    textract>=1.6.5
    scikit-learn>=1.5.0

[options.entry_points]
console_scripts =
    taxonerd = taxonerd.cli:main

[options.extras_require]
cuda11x =
    cupy-cuda11x>=11.0.0,<13.0.0
cuda12x =
    cupy-cuda12x>=11.5.0,<13.0.0
cuda-autodetect =
    cupy-wheel>=11.0.0,<13.0.0

[options.packages.find]
exclude =
    dev*
    eval*
    models*
    R*
    taxonerd-*
    test*
    configs*

[tool:pytest]
addopts = --ignore=dev --ignore=eval --ignore=models --ignore=R
